--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "file-5.42.tar.gz": 7553ac75e6400fbf29f0a5a22b944213c2f05060
+  file-5.43.tar.gz: 8cb1a01257e9d9b15bb58dae409e1cb6710c5947
